# car_store

./: .env.example  .gitignore  README.md  docker-compose.yml  docker-compose.yml.example  main.py  pyproject.toml
migrations/versions/: fb4e7a7eaf62_mensaje_opcional.py
src/: db.py  forms.py  models.py  run.py
src/static/: base-css.css  car_detail.css  index.css  login_forms.css  profile_user.css  signup_forms.css  upadte_car.css
src/static/images/: image.avif
src/templates/: base_template.html  car_detail.html  car_form.html  index.html  login_form.html  my_cars.html  profile_user.html  signup_form.html  update_car.html
